@@ -234,6 +234,7 @@ nv8600mgt_backlight_probe(void)
 
       case MACHINE_MACBOOKPRO_5:
       case MACHINE_MACBOOK_5:
+      case MACHINE_MACBOOK_6:
       case MACHINE_MACBOOKAIR_2:
 	bl_port = 0x52e; /* 0x52e - 0x52f */
 	break;
