@@ -329,6 +329,14 @@ struct machine_ops mb_mops[] = {
     /* .evdev_identify = evdev_is_wellspring3, */
   },
 
+  {  /* MacBook6,1 (Core2 Duo, October 2009) */
+    .type = MACHINE_MACBOOK_6,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
+    /* .evdev_identify = evdev_is_wellspring3, */
+  },
+
   /* MacBook Air machines */
 
   {  /* MacBookAir1,1 (January 2008) */
@@ -698,6 +706,9 @@ check_machine_dmi(void)
   /* Core2 Duo MacBook (October 2008) (5,2 white MacBook) */
   else if ((strcmp(buf, "MacBook5,1") == 0) || (strcmp(buf, "MacBook5,2") == 0))
     ret = MACHINE_MACBOOK_5;
+  /* Core2 Duo MacBook (October 2009) */
+  else if (strcmp(buf, "MacBook6,1") == 0)
+    ret = MACHINE_MACBOOK_6;
   /* MacBook Air (January 2008) */
   else if (strcmp(buf, "MacBookAir1,1") == 0)
     ret = MACHINE_MACBOOKAIR_1;
