@@ -41,6 +41,7 @@ typedef enum
     MACHINE_MACBOOK_3,
     MACHINE_MACBOOK_4,
     MACHINE_MACBOOK_5,
+    MACHINE_MACBOOK_6,
 
     MACHINE_MACBOOKAIR_1,
     MACHINE_MACBOOKAIR_2,
