@@ -2,6 +2,7 @@ ChangeLog for pommed
 --------------------
 
 version 1.33:
+	- pommed: added support for the MacBook6,1 (October 2009).
 
 version 1.32:
 	- pommed: add the rivabl sysfs backlight driver for older 12"
